--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Landing page</title>
-</head>
-<body>
-    
-</body>
+
+<html lan="en">
+    <head>
+        <title>Landingpage</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body>
+        <header>
+            <section class="header">
+                <nav>
+                    <a class="logo" href="#">Header Logo</a>
+
+                    <ul>
+                        <li><a href="#">header link one</a></li>
+                        <li><a href="#">header link two</a></li>
+                        <li><a href="#">header link three</a></li>
+                    </ul>
+                </nav>
+
+                <section class="hero">
+                    <div class="herotext">
+                        <h1>This website is awsome</h1>
+                        <p>This website has some subtext that goes here under the<br>main title. it's a smaller font and the color is lower<br>contrast</p>
+                    <button>Sign up</button>
+                    </div>
+                    <section class="imageplaceholder">
+                        <p>this is a placeholder for an image</p>
+                    </section>
+                </section>
+            </section>
+        </header>
+    </body>
 </html>
